# latticeplotter

./: .gitignore  CMakeLists.txt  D2Q5-example  Makefile
.kdev4/: latticeplotter.kdev4
doc/: Documentation.dvi  a.out  carswagn@webstor.ndsu.nodak.edu  prog2.c  prog3.c
include/: baseargumenterror.h  baseerror.h  output.h
lib/: CMakeLists.txt  baseargumenterror.cpp  baseerror.cpp
lib/newgraph/: CMakeLists.txt  analyse.c  analyse.h  cobject3d.c  color.c  contour.c  draw2dgraph.c  draw3dcontour.c  draw3dgraph.c  fftn.c  graph.c  koord.c  koord.h  koord2d.c  koord3d.c  menu.c  mydraw.c  mydraw_2d.c  mygraph.c  myprog.c  myrand.c  neuzeichnen.c  neuzeichnen.h  objects3d.c  old_analyse.c  old_analyse.h  tfield.c  ufield.c  ufield.h  vecstruct.h  vector.c  view3d.c
lib/newgraph/Documentation/: Documentation.aux  Documentation.ps  Documentation.tex  prog1.c  prog2  screen1.eps
lib/newgraph/Documentation/.xvpics/: screen1.eps
lib/newgraph/Documentation/Documentation/: footnode.html  images.pl  node1.html  node10.html  node5.html  node6.html  node9.html
lib/newgraph/illusion/: after.eps
newgraph/: Graph3d.out  Makefile  Makefile_origin  Makefile~  basicdef.h~  cobject3d.h  color.c  draw3dcontour.c  draw3dgraph.c  draw3dgraph.h  graph.c~  graph.h  graph.h~  koord.c  koord2d.h  koord3d.c  menu.c  menu.c~  menu.h  mydraw.c  mydraw.h  mydraw_2d.c~  mydraw_2d.h~  mygraph.c~  mygraph.h~  myprog.c  myprog.c~  myrand.c  myrand.h  neuzeichnen.c  neuzeichnen.c~  neuzeichnen.h~  objects3d.h  tfield.h  vector.c  view3d.c
src/: CMakeLists.txt  D2Q5-example.c  main.cpp  (+2 more)
(+64 files in other folders)
